# agent-harness

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  release.toml
crates/agent-harness/: Cargo.toml  README.md
crates/agent-harness/examples/: custom_harness.rs  replay_bob.rs  run_bob.rs  run_bob_harness.rs  run_prompt.rs  setup.rs  verify_enrichment.rs
crates/agent-harness/src/: claude.rs  codex.rs  events.rs  harness.rs  lib.rs  raw.rs  registry.rs
crates/agent-harness/src/bob/: mod.rs  parser.rs  raw.rs
crates/agent-harness/src/claude/: mod.rs  parser.rs
crates/agent-harness/src/codex/: mod.rs  parser.rs
crates/agent-harness/tests/: stub_run.rs
crates/bob-rs/: Cargo.toml  README.md
crates/bob-rs/examples/: run_bob.rs
crates/bob-rs/scripts/: install-bob.sh
crates/bob-rs/src/: check.rs  error.rs  install.rs  keychain.rs  lib.rs  run.rs
crates/cli-stream/: Cargo.toml  README.md
crates/cli-stream/src/: error.rs  install.rs  lib.rs  process.rs
scripts/: check.sh
