# agent-harness — a Rust framework for driving agent CLIs, with adapters.
#
# Crates (the dependency arrow only points up):
#   * cli-stream    — generic streaming-subprocess engine: spawn a CLI,
#                     stream stdout/stderr line-by-line, cancel
#                     (SIGTERM→SIGKILL), and augment PATH so a Node-based
#                     CLI resolves even from a packaged .app. No agent or
#                     harness knowledge. [publishable]
#   * bob-rs        — UNOFFICIAL Rust SDK for the `bob` agent CLI:
#                     detection, install, OS keychain, spawn. → cli-stream.
#                     Not affiliated with the bob maintainers. [publishable]
#   * agent-harness — the framework (imported as `harness`): the `Harness`
#                     trait + the normalized `RunEvent` vocabulary + an open
#                     `Registry`, with feature-gated bob/claude/codex adapter
#                     modules. → cli-stream + bob-rs (optional). [publishable]
[workspace]
resolver = "2"
members = ["crates/cli-stream", "crates/bob-rs", "crates/agent-harness"]

# Single source of truth for the version + shared publish metadata. The three
# crates release in lockstep, so the version lives here once and each crate
# inherits it with `version.workspace = true`. A bump (e.g. `cargo release`)
# edits this one line instead of three drifting manifests.
[workspace.package]
version = "0.3.5"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/getlatentic/agent-harness"

# Dependencies declared once, referenced with `<dep>.workspace = true` per
# crate. The internal crates carry their published `version` here too, so the
# dependency requirement bumps in lockstep with the version above — never by
# hand-editing each consumer.
[workspace.dependencies]
cli-stream = { path = "crates/cli-stream", version = "0.3.5" }
bob-rs = { path = "crates/bob-rs", version = "0.3.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
