[package]
name = "agent-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Use existing agent CLIs (Claude Code, Codex, bob) programmatically from Rust — or add your own — behind one Harness trait + a normalized run-event stream. Imported as `harness`."
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["agent", "llm", "harness", "cli", "subprocess"]
categories = ["command-line-utilities", "api-bindings"]

# The harness umbrella: the framework (trait + RunEvent + open Registry,
# re-exporting the engine from `cli-stream`) plus the built-in bob/claude/
# codex adapters as feature-gated modules. Imported as `harness`
# (`use harness::{Harness, Registry, Bob, Claude, Codex}`); with
# `default-features = false` it's just the lean framework — no adapters,
# no keyring.
[lib]
name = "harness"

[features]
default = ["bob", "claude", "codex"]
# The bob adapter pulls in the bob SDK (keyring / tempfile / installer);
# gating it keeps that weight off a claude/codex-only consumer.
bob = ["dep:bob-rs"]
# claude / codex own their CLI's login — no extra deps.
claude = []
codex = []

[dependencies]
# The generic subprocess engine (spawn / cancel / PATH augmentation) + the
# ProcessEvent / InstallEvent shapes. Re-exported so adapters + consumers
# reach the engine through this framework crate.
cli-stream.workspace = true
# The unofficial bob SDK — wrapped by the `bob` adapter module, so it's
# optional + gated behind the `bob` feature.
bob-rs = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
# Typed errors for the public API (HarnessError) — derive Display + the
# std::error::Error source chain without hand-writing impls.
thiserror.workspace = true

# cargo-release stamps the single shared workspace CHANGELOG here — on the last
# crate of the lockstep release — so the version header is inserted exactly
# once (a workspace-wide replacement would run per crate and duplicate it). The
# path is relative to this manifest; the CHANGELOG lives at the workspace root.
[package.metadata.release]
pre-release-replacements = [
  { file = "../../CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
]

